--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
-* {
-    /* background-color: #0D0D0D; */
-    background-color: goldenrod;
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
+body {
+    background-color: #0d0d0d;
+    padding-bottom: 50px;
 }
 
-.logo {
-    text-align: center;
+h1 {
+    color: #FFFF;
+}
+
+.header_logo {
+    width: 100%;
+    height: auto;
+    background-color: #0d0d0d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/** aumentando o tamanho da logo*/
+.header_logo img {
+    height: 10vh;
 }
 
 .background-img-top {
@@ -22,7 +32,7 @@
     margin-left: 100px;
 } */
 
-.mar-inv-ken {
+.header_infos {
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
     color: #F1F3F5;
