--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@ body {
     padding-bottom: 50px;
 }
 
-h1 {
-    color: #FFFF;
-}
-
 .header_logo {
     width: 100%;
     height: auto;
@@ -16,71 +12,100 @@ h1 {
     justify-content: center;
 }
 
-/** aumentando o tamanho da logo*/
 .header_logo img {
     height: 10vh;
 }
 
-.background-img-top {
-    background-image: url(img/banner.png);
-}
-
-/* .init-text {
-    margin-top: 87px;
-    margin-right: 0px;
-    margin-bottom: 86px;
-    margin-left: 100px;
-} */
-
 .header_infos {
-    font-family: 'Poppins', sans-serif;
-    font-size: 48px;
-    color: #F1F3F5;
-}
-
-.text-caps {
-    font-family: Poppins;
-    font-size: 20px;
-    color: #F1F3F5;
-}
-
-.text-non-caps {
-    font-family: Poppins;
-    font-size: 18px;
-    color: #F1F3F5;
-}
-
-.temporadas {
-    font-family: Poppins;
-    font-size: 20px;
-    color: #F1F3F5;
-    margin-bottom: 43px;
-}
-
-.temp-temp {
+    background-image: url("img/banner.png");
+    background-size: cover;
+    width: 100%;
+    height: 50vh;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 60px;
-}
-
-.temp-all,
-.temp-1,
-.temp-2,
-.temp-3 {
-    font-family: Poppins;
-    font-size: 16px;
-    color: #F1F3F5;
-}
-
-.margin {
-    display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    gap: 60px;
+}
+
+.header_infos h1 {
+    color: #ffffff;
+    font-family: "Poppins", sans-serif;
+    font-size: 48px;
+    font-weight: bold;
+    margin-left: 150px;
+}
+
+.header_infos p {
+    color: #ffffff;
+    font-family: "Poppins", sans-serif;
+    font-size: 28px;
+    max-width: 68%;
+    margin-left: 150px;
+}
+
+main {
+    padding-left: 150px;
+    display: flex;
+    flex-direction: row;
+}
+
+.main_nav {
+    display: flex;
+    height: 20vh;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+
+.main_nav h3 {
+    font-size: 30px;
+    font-family: "Poppins", sans-serif;
+    color: #ffffff;
+}
+
+.main_nav ul {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.main_nav ul li {
+    color: #ffffff;
+    font-size: 24px;
+    display: flex;
     align-items: center;
-    padding: 12px 50px;
-    gap: 10px;
-    left: 270px;
-    border: 2px solid #FFFFFF;
-    border-radius: 32px;
+    justify-content: center;
+    font-family: "Poppins", sans-serif;
+    height: 60px;
+    width: 230px;
+    border: 2px solid #ffffff;
+    border-radius: 50px;
+}
+
+.main_nav ul li:hover {
+    background-color: #ffffff;
+    color: #0d0d0d;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.main_nav ul li:active {
+    background-color: #e5e5e5;
+}
+
+.main_vitrine {
+    width: 100%;
+    height: auto;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.main_card {
+    width: 90%;
+    height: auto;
+    height: 350px;
+    background-image: url("img/imagemCard.png");
+    background-size: cover;
 }
