--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ main {
     display: flex;
     flex-direction: row;
     gap: 20px;
+    padding: 0;
 }
 
 .main_nav ul li {
@@ -108,4 +109,130 @@ main {
     height: 350px;
     background-image: url("img/imagemCard.png");
     background-size: cover;
+}
+
+.main_card_top {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    color: #ffffff;
+    margin-left: 30px;
+}
+
+.main_card_top h2 {
+    font-size: 40px;
+}
+
+.main_card_top span {
+    font-size: 28px;
+}
+
+.main_card_bottom {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    color: #ffffff;
+    margin-left: 30px;
+}
+
+.main_card_bottom p {
+    font-size: 28px;
+    max-width: 70%;
+    margin-bottom: 50px;
+}
+
+.main_card_bottom span {
+    font-size: 28px;
+    margin-bottom: 50px;
+}
+
+.main_card_bottom span:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.main_left {
+    width: 70%;
+}
+
+.main_playlist {
+    width: 30%;
+    height: 600px;
+}
+
+.main_playlist h3 {
+    font-size: 30px;
+    font-family: "Poppins", sans-serif;
+    color: #ffffff;
+    margin-bottom: 30px;
+    margin-top: 60px;
+}
+
+.playlist_li {
+    display: flex;
+    flex-direction: row;
+    height: 110px;
+    align-items: center;
+}
+
+.playlist_li img {
+    height: 95%;
+    width: auto;
+    margin-right: 10px;
+}
+
+.playlist_li_center {
+    width: 50%;
+}
+
+.playlist_li_center div h4 {
+    font-size: 24px;
+    font-family: "Poppins", sans-serif;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.playlist_li_center div span {
+    font-size: 18px;
+    font-family: "Poppins", sans-serif;
+    color: #ffffff;
+}
+
+.playlist_li_playButton {
+    display: flex;
+    height: 50%;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.playlist_li_playButton img {
+    height: 30px;
+    margin-right: 10px;
+}
+
+.playlist_li_end {
+    width: 25%;
+    height: 100%;
+    display: flex;
+}
+
+.playlist_li_end button {
+    height: 30px;
+    width: 30px;
+    margin-top: 10px;
+    background-color: transparent;
+    background-image: url("../img/trash-icon.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    border: none;
+}
+
+.playlist_li_end button:hover {
+    cursor: pointer;
 }
